--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ nav i {
   width: 505px;
   height: 60.9px;
   font-size: 18px;
-  margin-bottom: 15px;
+  margin-bottom: 35px;
 }
 
 .image1 {
@@ -107,6 +107,7 @@ nav i {
   width: 70%;
   height: auto;
   margin: auto;
+  margin-bottom: 50px;
 }
 .sec3title {
   text-align: center;
@@ -175,10 +176,71 @@ nav i {
   display: grid;
   justify-content: end;
   text-decoration: none;
+  margin-bottom: 15px;
 }
 .seemore a {
   font-weight: 700;
   text-decoration: none;
   color: #e02c6d;
   margin-left: -125px;
+}
+.section4 {
+  width: 70%;
+  margin: auto;
+  height: 300px;
+  border: 1px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 55px;
+}
+.section4 h1 {
+  font-size: 28px;
+  margin-bottom: 25px;
+}
+.subscribe {
+  padding: 10px 24px;
+  width: 196px;
+  height: 44px;
+  background: #e02c6d;
+  border-radius: 41px;
+  border: none;
+}
+.subscribe a {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+}
+#subscribeinput {
+  margin-bottom: 25px;
+  width: 300px;
+  height: 35px;
+  font-size: 1.2em;
+  padding-left: 5px;
+  background-color: white;
+  border: none;
+  border: 2px solid palevioletred;
+}
+.newslatter {
+  display: grid;
+  justify-items: center;
+}
+footer {
+  width: 100%;
+  height: 190px;
+  text-align: center;
+  display: grid;
+  background-color: #0a0826;
+  color: #ffffff;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+}
+footer h1 {
+  font-size: 32px;
+}
+footer img {
+  width: 20%;
 }
