With Mobile Responsive

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Full Body Style */
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +9,9 @@ body {
   font-family: "Rubik", sans-serif;
   font-family: "Spline Sans", sans-serif;
 }
+
+/* Header Style */
+
 header {
   background-color: white;
   width: 70%;
@@ -40,6 +44,9 @@ nav i {
   color: black;
   margin-right: 25px;
 }
+/* Section--------------  1----------
+------------------------------------- Style  */
+
 .section1 {
   width: 70%;
   height: 550px;
@@ -76,6 +83,12 @@ nav i {
   justify-content: end;
 }
 
+.image1 img {
+  transition: transform 0.6s;
+}
+.image1 img:hover {
+  transform: scale(1.2);
+}
 .prebook {
   padding: 10px 24px;
   width: 196px;
@@ -90,6 +103,8 @@ nav i {
   font-size: 16px;
   font-weight: bold;
 }
+/* Section--------------  2----------
+------------------------------------- Style  */
 .section2 {
   width: 70%;
   height: 90px;
@@ -102,7 +117,14 @@ nav i {
   border-bottom: 0.1px solid;
   border-color: whitesmoke;
 }
-
+.section2 a img {
+  transition: transform 0.6s;
+}
+.section2 img:hover {
+  transform: scale(1.5);
+}
+/* Section--------------  3----------
+------------------------------------- Style  */
 .section3 {
   width: 70%;
   height: auto;
@@ -184,6 +206,9 @@ nav i {
   color: #e02c6d;
   margin-left: -125px;
 }
+
+/* Section--------------  4----------
+------------------------------------- Style  */
 .section4 {
   width: 70%;
   margin: auto;
@@ -194,6 +219,7 @@ nav i {
   justify-items: center;
   align-items: center;
   margin-bottom: 55px;
+  background-color: aliceblue;
 }
 .section4 h1 {
   font-size: 28px;
@@ -227,6 +253,8 @@ nav i {
   display: grid;
   justify-items: center;
 }
+/* -------------- Footer Section----------
+------------------------------------- Style  */
 footer {
   width: 100%;
   height: 190px;
@@ -243,4 +271,287 @@ footer h1 {
 }
 footer img {
   width: 20%;
+}
+
+/* Responsive Css For Mobile */
+
+@media (max-width: 480px) {
+  /* Header For Mobile */
+  header {
+    background-color: white;
+    width: 100%;
+    height: 100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .logo {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    color: blue;
+  }
+  nav {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  nav a {
+    margin-right: 15px;
+    margin-left: 12px;
+    text-decoration: none;
+    font-weight: 700;
+    color: black;
+  }
+  nav i {
+    color: black;
+    margin-right: 25px;
+  }
+
+  /* Section--------------  1----------
+------------------------------------- Style  */
+
+  .section1 {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: 50px;
+  }
+  .text1 {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+  }
+  .text1 h1 {
+    font-size: 32px;
+    width: 80%;
+    height: 70px;
+    margin-bottom: 20px;
+    margin-top: 25px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .text1 p {
+    width: 90%;
+    height: 60.9px;
+    font-size: 18px;
+    margin-bottom: 85px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .image1 {
+    width: 100%;
+    height: 100%;
+    display: grid;
+  }
+  .image1 img {
+    width: 80%;
+    margin-top: 35px;
+    margin-left: auto;
+    margin-right: auto;
+    transition: transform 0.6s;
+  }
+
+  .image1 img:hover {
+    transform: scale(1.2);
+  }
+  .prebookbut {
+    background-color: blueviolet;
+    display: grid;
+    margin-top: 25px;
+  }
+  .prebook {
+    padding: 10px 24px;
+    width: 196px;
+    height: 44px;
+    background: #e02c6d;
+    border-radius: 41px;
+    border: none;
+    display: grid;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .prebook a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  /* Section--------------  2----------
+------------------------------------- Style  */
+  .section2 {
+    width: 280px;
+    height: 61.46px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin-bottom: 50px;
+    border-top: 0.1px solid;
+    border-bottom: 0.1px solid;
+    border-color: whitesmoke;
+    justify-items: center;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    grid-gap: 10px;
+  }
+  .section2 img {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    transition: transform 0.6s;
+  }
+  .section2 img:hover {
+    transform: scale(1.5);
+  }
+  /* Section--------------  3----------
+------------------------------------- Style  */
+  .section3 {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+  .sec3title {
+    text-align: center;
+    font-size: 20px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    margin-bottom: 50px;
+  }
+  .products {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    margin-bottom: 40px;
+  }
+  .product {
+    width: 329px;
+    height: 476px;
+    border-radius: 5px;
+    display: grid;
+    background: #ffffff;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    justify-content: center;
+    padding: 10px;
+    margin-bottom: 40px;
+  }
+  .productname {
+    width: 151px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 40px;
+    color: #18191f;
+  }
+  .price {
+    height: 36px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.87);
+  }
+  .shortdescription {
+    width: 200px;
+    height: 61px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 143%;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.018em;
+    color: #787885;
+  }
+  .rating i {
+    color: orange;
+    font-weight: bold;
+  }
+  .rating {
+    font-weight: bold;
+  }
+  .seemore {
+    display: grid;
+    justify-content: end;
+    text-decoration: none;
+    margin-bottom: 15px;
+  }
+  .seemore a {
+    font-weight: 700;
+    text-decoration: none;
+    color: #e02c6d;
+    margin-left: -125px;
+  }
+  /* Section--------------  4----------
+------------------------------------- Style  */
+  .section4 {
+    width: 100%;
+    margin: auto;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 55px;
+    background-color: aliceblue;
+  }
+  .section4 h1 {
+    font-size: 28px;
+    margin-bottom: 25px;
+  }
+  .subscribe {
+    padding: 10px 24px;
+    width: 196px;
+    height: 44px;
+    background: #e02c6d;
+    border-radius: 41px;
+    border: none;
+    margin-bottom: 25px;
+  }
+  .subscribe a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  #subscribeinput {
+    margin-bottom: 25px;
+    width: 300px;
+    height: 35px;
+    font-size: 1.2em;
+    padding-left: 5px;
+    background-color: white;
+    border: none;
+    border: 2px solid palevioletred;
+  }
+  .newslatter {
+    display: grid;
+    justify-items: center;
+  }
+  .lastimg {
+    width: 81%;
+    display: grid;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
