--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ footer img {
     margin-right: auto;
   }
   nav a {
-    margin-right: 15px;
+    margin-right: 12px;
     margin-left: 12px;
     text-decoration: none;
     font-weight: 700;
@@ -332,6 +332,7 @@ footer img {
     display: grid;
     align-content: center;
     justify-content: center;
+    order: 2;
   }
   .text1 h1 {
     font-size: 32px;
@@ -357,6 +358,7 @@ footer img {
     width: 100%;
     height: 100%;
     display: grid;
+    order: 1;
   }
   .image1 img {
     width: 80%;
