--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ nav i {
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
   margin-bottom: 70px;
+  grid-row-gap: 5em;
 }
 .product {
   width: 329px;
@@ -275,7 +276,7 @@ footer img {
 
 /* Responsive Css For Mobile */
 
-@media (max-width: 480px) {
+@media only screen and (max-width: 600px) {
   /* Header For Mobile */
   header {
     background-color: white;
@@ -441,6 +442,7 @@ footer img {
     grid-template-columns: repeat(1, 1fr);
     justify-items: center;
     margin-bottom: 40px;
+    grid-row-gap: 2em;
   }
   .product {
     width: 329px;
@@ -555,5 +557,280 @@ footer img {
     display: grid;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+/* Responsive Design For Teblet */
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  /* Header For Teblet */
+  header {
+    background-color: white;
+    width: 100%;
+    height: 100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .logo {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    color: blue;
+  }
+  nav {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  nav a {
+    margin-right: 12px;
+    margin-left: 12px;
+    text-decoration: none;
+    font-weight: 700;
+    color: black;
+  }
+  nav i {
+    color: black;
+    margin-right: 25px;
+  }
+  /* Section--------------  1----------
+------------------------------------- Style  */
+
+  .section1 {
+    width: 90%;
+    height: 550px;
+    margin: auto;
+    display: grid;
+    justify-content: space-between;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 50px;
+  }
+  .text1 {
+    width: 50%;
+    height: 100%;
+    display: grid;
+    align-content: center;
+  }
+  .text1 h1 {
+    font-size: 42px;
+    width: 582px;
+    height: 133px;
+    margin-bottom: 15px;
+  }
+  .text1 p {
+    width: 505px;
+    height: 60.9px;
+    font-size: 18px;
+    margin-bottom: 35px;
+  }
+
+  .image1 {
+    width: 50%;
+    height: 100%;
+  }
+
+  .image1 img {
+    width: 200%;
+    transition: transform 0.6s;
+  }
+  .image1 img:hover {
+    transform: scale(1.2);
+  }
+  .prebook {
+    padding: 10px 24px;
+    width: 196px;
+    height: 44px;
+    background: #e02c6d;
+    border-radius: 41px;
+    border: none;
+  }
+  .prebook a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  /* Section--------------  2----------
+------------------------------------- Style  */
+  .section2 {
+    width: 70%;
+    height: 61.46px;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    margin-bottom: 50px;
+    border-top: 0.1px solid;
+    border-bottom: 0.1px solid;
+    border-color: whitesmoke;
+    justify-items: center;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    grid-gap: 10px;
+  }
+  .section2 img {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    transition: transform 0.6s;
+  }
+  .section2 img:hover {
+    transform: scale(1.5);
+  }
+  /* Section--------------  3----------
+------------------------------------- Style  */
+  .section3 {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-bottom: 50px;
+  }
+  .sec3title {
+    text-align: center;
+    font-size: 20px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    margin-bottom: 50px;
+  }
+  .products {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    margin-bottom: 40px;
+    grid-row-gap: 2em;
+  }
+  .product {
+    width: 329px;
+    height: 476px;
+    border-radius: 5px;
+    display: grid;
+    background: #ffffff;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    justify-content: center;
+    padding: 10px;
+    margin-bottom: 40px;
+  }
+  .productname {
+    width: 151px;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 40px;
+    color: #18191f;
+  }
+  .price {
+    height: 36px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, 0.87);
+  }
+  .shortdescription {
+    width: 200px;
+    height: 61px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 143%;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.018em;
+    color: #787885;
+  }
+  .rating i {
+    color: orange;
+    font-weight: bold;
+  }
+  .rating {
+    font-weight: bold;
+  }
+  .seemore {
+    display: grid;
+    justify-content: end;
+    text-decoration: none;
+    margin-bottom: 15px;
+  }
+  .seemore a {
+    font-weight: 700;
+    text-decoration: none;
+    color: #e02c6d;
+    margin-left: -125px;
+  }
+  /* Section--------------  4----------
+------------------------------------- Style  */
+  .section4 {
+    width: 90%;
+    margin: auto;
+    height: 300px;
+    border: 1px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    align-items: center;
+    margin-bottom: 55px;
+    background-color: aliceblue;
+  }
+  .section4 h1 {
+    font-size: 28px;
+    margin-bottom: 25px;
+  }
+  .subscribe {
+    padding: 10px 24px;
+    width: 196px;
+    height: 44px;
+    background: #e02c6d;
+    border-radius: 41px;
+    border: none;
+  }
+  .subscribe a {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  #subscribeinput {
+    margin-bottom: 25px;
+    width: 300px;
+    height: 35px;
+    font-size: 1.2em;
+    padding-left: 5px;
+    background-color: white;
+    border: none;
+    border: 2px solid palevioletred;
+  }
+  .newslatter {
+    display: grid;
+    justify-items: center;
+  }
+  /* -------------- Footer Section----------
+------------------------------------- Style  */
+  footer {
+    width: 100%;
+    height: 190px;
+    text-align: center;
+    display: grid;
+    background-color: #0a0826;
+    color: #ffffff;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+  }
+  footer h1 {
+    font-size: 32px;
+  }
+  footer img {
+    width: 20%;
   }
 }
